--- a/MyPartyApp/Base.lproj/Main.storyboard
+++ b/MyPartyApp/Base.lproj/Main.storyboard
@@ -10,39 +10,49 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Parties Table View Controller-->
+        <!--Your Parties-->
         <scene sceneID="1DL-3V-Kxj">
             <objects>
                 <tableViewController id="cht-Lp-ChY" customClass="PartiesTableViewController" customModule="MyPartyApp" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="pOd-Cu-HDQ">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="125" sectionHeaderHeight="28" sectionFooterHeight="28" id="pOd-Cu-HDQ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="Cell" textLabel="Yil-kI-w5H" detailTextLabel="Ax6-7d-k5Z" style="IBUITableViewCellStyleValue1" id="yEU-AY-uR2">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="PartyCell" rowHeight="125" id="yEU-AY-uR2" customClass="PartyTableViewCell" customModule="MyPartyApp" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="125"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="yEU-AY-uR2" id="YTg-wV-9vK">
-                                    <rect key="frame" x="0.0" y="0.0" width="342" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="342" height="124"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Yil-kI-w5H">
-                                            <rect key="frame" x="15" y="11" width="34" height="21"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hnJ-gA-14Y">
+                                            <rect key="frame" x="8" y="8" width="188" height="28"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Ax6-7d-k5Z">
-                                            <rect key="frame" x="296" y="11" width="44" height="21"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2AP-zL-Q1x">
+                                            <rect key="frame" x="29" y="66" width="305" height="50"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ugs-jj-D1z">
+                                            <rect key="frame" x="17" y="37" width="188" height="21"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="addressLabel" destination="2AP-zL-Q1x" id="Zc2-6O-THk"/>
+                                    <outlet property="dateLabel" destination="ugs-jj-D1z" id="APB-WS-Euj"/>
+                                    <outlet property="nameLabel" destination="hnJ-gA-14Y" id="in2-76-I2X"/>
                                     <segue destination="44T-vi-dg9" kind="show" id="lde-Cz-1Uv"/>
                                 </connections>
                             </tableViewCell>
@@ -52,19 +62,11 @@
                             <outlet property="delegate" destination="cht-Lp-ChY" id="Hbk-e9-V1i"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="ue1-0o-9q0">
-                        <nil key="title"/>
-                        <textField key="titleView" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Parties List" textAlignment="center" minimumFontSize="17" id="ybh-fT-5DJ">
-                            <rect key="frame" x="113" y="7" width="150" height="30"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <color key="textColor" red="1" green="0.20716898986414223" blue="0.24748190259440217" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
-                            <textInputTraits key="textInputTraits"/>
-                        </textField>
+                    <navigationItem key="navigationItem" title="Your Parties" id="ue1-0o-9q0">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="ZQa-Fq-mFb">
                             <color key="tintColor" red="1" green="0.20716898986414223" blue="0.24748190259440217" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <connections>
-                                <segue destination="mg1-lo-2gp" kind="show" id="edf-Jo-xTP"/>
+                                <segue destination="6pN-h6-QdW" kind="show" identifier="AddParty" id="pl0-DD-iod"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -73,7 +75,7 @@
             </objects>
             <point key="canvasLocation" x="1031.2" y="118.29085457271366"/>
         </scene>
-        <!--Add Party View Controller-->
+        <!--New Party-->
         <scene sceneID="aOD-fS-N5i">
             <objects>
                 <viewController id="mg1-lo-2gp" customClass="AddPartyViewController" customModule="MyPartyApp" customModuleProvider="target" sceneMemberID="viewController">
@@ -110,7 +112,7 @@
                                 <color key="textColor" red="1" green="0.2810565531" blue="0.32174134250000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Addres" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4MN-ZE-qcK">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4MN-ZE-qcK">
                                 <rect key="frame" x="39" y="387" width="297" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="P3H-dd-gIm"/>
@@ -119,7 +121,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="name" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4T5-ct-eQJ">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4T5-ct-eQJ">
                                 <rect key="frame" x="39" y="157" width="297" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="vo1-6w-gyY"/>
@@ -128,7 +130,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="mm/dd/yyyy" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Rfq-rw-ihW">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Choose Date and Time" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Rfq-rw-ihW">
                                 <rect key="frame" x="39" y="278" width="297" height="30"/>
                                 <accessibility key="accessibilityConfiguration" hint="name "/>
                                 <constraints>
@@ -159,10 +161,20 @@
                             <constraint firstItem="4T5-ct-eQJ" firstAttribute="leading" secondItem="nPQ-It-a9g" secondAttribute="leadingMargin" constant="23" id="xHe-O4-iD4"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="New Party" id="Zmb-i1-Hpu">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="WxR-8g-wiY"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="bVG-QT-iVO"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="addAddressLabel" destination="4MN-ZE-qcK" id="Laz-oQ-s2q"/>
+                        <outlet property="addDateLabel" destination="Rfq-rw-ihW" id="B5m-yR-MZU"/>
+                        <outlet property="addNameLabel" destination="4T5-ct-eQJ" id="axH-L9-Ttu"/>
+                        <outlet property="saveButton" destination="bVG-QT-iVO" id="Ofa-bb-9f6"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="j6q-bt-oiQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2240.8000000000002" y="-356.67166416791605"/>
+            <point key="canvasLocation" x="4119.1999999999998" y="-356.67166416791605"/>
         </scene>
         <!--Map View Controller-->
         <scene sceneID="i9W-mB-3tY">
@@ -200,5 +212,24 @@
             </objects>
             <point key="canvasLocation" x="92" y="118.29085457271366"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="w4o-WA-3IC">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="6pN-h6-QdW" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Rnq-7U-JHO">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="mg1-lo-2gp" kind="relationship" relationship="rootViewController" id="SIT-ts-UOM"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cNB-B9-qCr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3180" y="-356.67166416791605"/>
+        </scene>
     </scenes>
+    <color key="tintColor" red="0.99992305040359497" green="0.30901139974594116" blue="0.35104399919509888" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
 </document>
