--- a/MyPartyApp/Base.lproj/Main.storyboard
+++ b/MyPartyApp/Base.lproj/Main.storyboard
@@ -117,7 +117,6 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="P3H-dd-gIm"/>
                                 </constraints>
-                                <color key="textColor" white="0.75" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
@@ -126,7 +125,6 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="vo1-6w-gyY"/>
                                 </constraints>
-                                <color key="textColor" white="0.75" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
@@ -136,7 +134,6 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="B0k-1G-4uI"/>
                                 </constraints>
-                                <color key="textColor" white="0.75" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
@@ -162,8 +159,17 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="New Party" id="Zmb-i1-Hpu">
-                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="WxR-8g-wiY"/>
-                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="bVG-QT-iVO"/>
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="WxR-8g-wiY">
+                            <connections>
+                                <action selector="cancel:" destination="mg1-lo-2gp" id="zgJ-wk-QHl"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="bVG-QT-iVO">
+                            <connections>
+                                <action selector="unwindtoparty:" destination="mg1-lo-2gp" id="m4P-nT-0fp"/>
+                                <segue destination="FdL-lZ-kd3" kind="unwind" unwindAction="unwindtoPartyTable:" id="dVn-eN-mzH"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="addAddressLabel" destination="4MN-ZE-qcK" id="Laz-oQ-s2q"/>
@@ -173,6 +179,7 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="j6q-bt-oiQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="FdL-lZ-kd3" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="4119.1999999999998" y="-356.67166416791605"/>
         </scene>
