--- a/MyPartyApp/Base.lproj/Main.storyboard
+++ b/MyPartyApp/Base.lproj/Main.storyboard
@@ -68,7 +68,7 @@
                                     <outlet property="addressLabel" destination="2AP-zL-Q1x" id="Tmp-lL-Ho4"/>
                                     <outlet property="dateLabel" destination="ugs-jj-D1z" id="Vhh-JD-LQE"/>
                                     <outlet property="nameLabel" destination="hnJ-gA-14Y" id="E6a-Bi-tBI"/>
-                                    <segue destination="44T-vi-dg9" kind="show" identifier="showLocationSegue" id="lde-Cz-1Uv"/>
+                                    <segue destination="nb6-bO-fgh" kind="show" identifier="showLocationSegue" id="xFL-CZ-gwo"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -81,7 +81,7 @@
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="ZQa-Fq-mFb">
                             <color key="tintColor" red="1" green="0.20716898986414223" blue="0.24748190259440217" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <connections>
-                                <segue destination="6pN-h6-QdW" kind="presentation" identifier="addPartySegue" id="pl0-DD-iod"/>
+                                <segue destination="mg1-lo-2gp" kind="presentation" identifier="addPartySegue" id="Shi-x9-Cex"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -103,35 +103,35 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QFm-4v-iMM">
-                                <rect key="frame" x="18" y="89" width="339" height="33.5"/>
+                                <rect key="frame" x="18" y="84" width="339" height="33.5"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                 <color key="textColor" red="1" green="0.28105655312538147" blue="0.32174134254455566" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IjA-9D-07n">
-                                <rect key="frame" x="21" y="192.5" width="333" height="33.5"/>
+                                <rect key="frame" x="21" y="187.5" width="333" height="33.5"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                 <color key="textColor" red="1" green="0.2810565531" blue="0.32174134250000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Address" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oMC-mL-6YJ">
-                                <rect key="frame" x="21" y="296" width="333" height="33.5"/>
+                                <rect key="frame" x="21" y="291" width="333" height="33.5"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                 <color key="textColor" red="1" green="0.2810565531" blue="0.32174134250000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4MN-ZE-qcK">
-                                <rect key="frame" x="41" y="344.5" width="293" height="30"/>
+                                <rect key="frame" x="41" y="339.5" width="293" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4T5-ct-eQJ">
-                                <rect key="frame" x="41" y="137.5" width="293" height="30"/>
+                                <rect key="frame" x="41" y="132.5" width="293" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Choose Date and Time" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Rfq-rw-ihW">
-                                <rect key="frame" x="41" y="241" width="293" height="30"/>
+                                <rect key="frame" x="41" y="236" width="293" height="30"/>
                                 <accessibility key="accessibilityConfiguration" hint="name "/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -139,6 +139,23 @@
                                     <action selector="startDatePicker:" destination="mg1-lo-2gp" eventType="editingDidBegin" id="gcy-R6-r8t"/>
                                 </connections>
                             </textField>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MUL-Zn-Y9A">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <items>
+                                    <navigationItem title="New Party" id="9sO-qj-Nra">
+                                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="vFT-FS-QVm">
+                                            <connections>
+                                                <action selector="cancel:" destination="mg1-lo-2gp" id="d3R-gz-SaW"/>
+                                            </connections>
+                                        </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="V3h-C7-ywD">
+                                            <connections>
+                                                <segue destination="FdL-lZ-kd3" kind="unwind" identifier="unwindtoPartyTable" unwindAction="unwindtoPartyTable:" id="ylS-SP-WEc"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
@@ -151,14 +168,18 @@
                             <constraint firstItem="4T5-ct-eQJ" firstAttribute="centerX" secondItem="nPQ-It-a9g" secondAttribute="centerX" id="JHt-ez-0SD"/>
                             <constraint firstItem="IjA-9D-07n" firstAttribute="leading" secondItem="nPQ-It-a9g" secondAttribute="leadingMargin" constant="5" id="NpK-wS-Kce"/>
                             <constraint firstItem="Rfq-rw-ihW" firstAttribute="leading" secondItem="nPQ-It-a9g" secondAttribute="leadingMargin" constant="25" id="TRI-Bf-KuC"/>
+                            <constraint firstItem="MUL-Zn-Y9A" firstAttribute="leading" secondItem="nPQ-It-a9g" secondAttribute="leading" id="V5o-UI-J7h"/>
                             <constraint firstItem="Rfq-rw-ihW" firstAttribute="centerX" secondItem="nPQ-It-a9g" secondAttribute="centerX" id="XA5-JK-K3e"/>
+                            <constraint firstAttribute="trailing" secondItem="MUL-Zn-Y9A" secondAttribute="trailing" id="aS6-qn-Pj7"/>
                             <constraint firstItem="oMC-mL-6YJ" firstAttribute="top" secondItem="Rfq-rw-ihW" secondAttribute="bottom" constant="25" id="csq-2w-0bW"/>
                             <constraint firstItem="oMC-mL-6YJ" firstAttribute="leading" secondItem="nPQ-It-a9g" secondAttribute="leadingMargin" constant="5" id="f58-RX-8di"/>
                             <constraint firstItem="QFm-4v-iMM" firstAttribute="centerX" secondItem="nPQ-It-a9g" secondAttribute="centerX" id="fd8-AK-tyv"/>
+                            <constraint firstItem="QFm-4v-iMM" firstAttribute="top" secondItem="MUL-Zn-Y9A" secondAttribute="bottom" constant="20" id="gOx-ja-vpw"/>
                             <constraint firstItem="4MN-ZE-qcK" firstAttribute="top" secondItem="oMC-mL-6YJ" secondAttribute="bottom" constant="15" id="hbc-Xp-KEX"/>
                             <constraint firstItem="4MN-ZE-qcK" firstAttribute="centerX" secondItem="nPQ-It-a9g" secondAttribute="centerX" id="k5j-gq-IFv"/>
                             <constraint firstItem="4T5-ct-eQJ" firstAttribute="leading" secondItem="nPQ-It-a9g" secondAttribute="leadingMargin" constant="25" id="o45-FB-EkG"/>
-                            <constraint firstItem="QFm-4v-iMM" firstAttribute="top" secondItem="nbj-rP-K83" secondAttribute="bottom" constant="25" id="oEa-Zc-QIp"/>
+                            <constraint firstItem="MUL-Zn-Y9A" firstAttribute="top" secondItem="nbj-rP-K83" secondAttribute="bottom" id="pnM-iJ-FgG"/>
+                            <constraint firstItem="MUL-Zn-Y9A" firstAttribute="centerX" secondItem="nPQ-It-a9g" secondAttribute="centerX" id="qjX-BP-p7J"/>
                             <constraint firstItem="4T5-ct-eQJ" firstAttribute="top" secondItem="QFm-4v-iMM" secondAttribute="bottom" constant="15" id="vP2-Wh-ctZ"/>
                         </constraints>
                     </view>
@@ -168,16 +189,12 @@
                                 <action selector="cancel:" destination="mg1-lo-2gp" id="zgJ-wk-QHl"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="bVG-QT-iVO">
-                            <connections>
-                                <segue destination="FdL-lZ-kd3" kind="unwind" identifier="unwindtoPartyTable" unwindAction="unwindtoPartyTable:" id="dVn-eN-mzH"/>
-                            </connections>
-                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="bVG-QT-iVO"/>
                     </navigationItem>
                     <connections>
                         <outlet property="addressTextField" destination="4MN-ZE-qcK" id="K8a-h0-9Gz"/>
                         <outlet property="nameTextField" destination="4T5-ct-eQJ" id="wmf-DA-0ph"/>
-                        <outlet property="saveButton" destination="bVG-QT-iVO" id="Ofa-bb-9f6"/>
+                        <outlet property="saveButton" destination="V3h-C7-ywD" id="m6S-Mw-4Zi"/>
                         <outlet property="startDateTextField" destination="Rfq-rw-ihW" id="X3U-dF-k1r"/>
                     </connections>
                 </viewController>
@@ -187,36 +204,32 @@
             <point key="canvasLocation" x="4119.1999999999998" y="-356.67166416791605"/>
         </scene>
         <!--Map View Controller-->
-        <scene sceneID="i9W-mB-3tY">
+        <scene sceneID="05o-of-Thd">
             <objects>
-                <viewController id="44T-vi-dg9" customClass="MapViewController" customModule="MyPartyApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="89I-5E-Nqe" customClass="MapViewController" customModule="MyPartyApp" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="Eg3-xK-VED"/>
-                        <viewControllerLayoutGuide type="bottom" id="kVw-jm-P0O"/>
+                        <viewControllerLayoutGuide type="top" id="twT-l3-jvV"/>
+                        <viewControllerLayoutGuide type="bottom" id="yNc-aD-mAN"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8C2-uV-ugP">
+                    <view key="view" contentMode="scaleToFill" id="AW1-h7-DCf">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="AGd-9y-9DP">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="crz-MQ-Bu8">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </mapView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="AGd-9y-9DP" firstAttribute="top" secondItem="Eg3-xK-VED" secondAttribute="bottom" id="0OJ-6n-DNR"/>
-                            <constraint firstAttribute="trailing" secondItem="AGd-9y-9DP" secondAttribute="trailing" id="8ii-nR-rf1"/>
-                            <constraint firstItem="AGd-9y-9DP" firstAttribute="leading" secondItem="8C2-uV-ugP" secondAttribute="leading" id="Fnx-vd-Ojm"/>
-                            <constraint firstItem="kVw-jm-P0O" firstAttribute="top" secondItem="AGd-9y-9DP" secondAttribute="bottom" id="wvh-FR-Z0h"/>
-                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="98N-LL-WVR"/>
                     <connections>
-                        <outlet property="mapView" destination="AGd-9y-9DP" id="eHC-p9-Qia"/>
+                        <outlet property="mapView" destination="crz-MQ-Bu8" id="Lbo-aG-1gH"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="7l8-Uk-Idv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fix-Rv-Dls" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2240.8000000000002" y="396.25187406296857"/>
+            <point key="canvasLocation" x="4444" y="691.304347826087"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="m9M-CP-35W">
@@ -237,22 +250,22 @@
             <point key="canvasLocation" x="92" y="118.29085457271366"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="w4o-WA-3IC">
+        <scene sceneID="LWr-mE-vBL">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="6pN-h6-QdW" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="nb6-bO-fgh" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Rnq-7U-JHO">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="vZZ-ld-fBJ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="mg1-lo-2gp" kind="relationship" relationship="rootViewController" id="SIT-ts-UOM"/>
+                        <segue destination="89I-5E-Nqe" kind="relationship" relationship="rootViewController" id="Pax-2I-djh"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="cNB-B9-qCr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Doj-SL-JpZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3180" y="-356.67166416791605"/>
+            <point key="canvasLocation" x="3504.8000000000002" y="691.304347826087"/>
         </scene>
     </scenes>
     <color key="tintColor" red="0.99992305040359497" green="0.30901139974594116" blue="0.35104399919509888" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
